# project_talos

./: .gitignore  project_structure.txt
.claude/skills/astro-tailwind-expert/: SKILL.md
.github/workflows/: cd.yml  ci.yml  landing_deploy.yml  landing_test.yml
backend/: .gitignore  main.py
docs/: PROJECT_TALOS_LEARNING_GUIDE.md  PROJECT_TALOS_OVERVIEW.md  PROJECT_TALOS_TECHNICAL_REQUIREMENTS.md
landing_page/: Dockerfile  astro.config.mjs  package.json
landing_page/public/: robots.txt
landing_page/src/components/: AuthFeatures.astro  AuthModal.astro  Button.astro  CTA.astro  ExecutionEngine.astro  Footer.astro  GeometryBackground.astro  Hero.astro  HeroVisual.astro  Pricing.astro  Stats.astro  WaitlistModal.astro
landing_page/src/layouts/: Layout.astro
landing_page/src/lib/: db.ts
landing_page/src/pages/: 404.astro  index.astro  privacy.astro  terms.astro
landing_page/src/pages/api/: waitlist.ts
landing_page/src/pages/docs/: index.astro  quickstart.astro
landing_page/src/styles/: global.css
src/: pyproject.toml
